Nova Rota Detalhes da Os

--- a/routes/ordens_de_servico/os_templates/os.html
+++ b/routes/ordens_de_servico/os_templates/os.html
@@ -18,9 +18,7 @@
             <tr>
                 <th>Número da Os</th>
                 <th>Cliente</th>
-                <th>Mecânico</th>
                 <th>Problema</th>
-                <th>Diagnóstico</th>
                 <th>Status Os</th>
                 <th>Data Os</th>
                 <th></th>
@@ -31,14 +29,13 @@
             <tr>
                 <td>{{os.id}}</td>
                 <td>{{os.nome}}</td>
-                <td>{{os['mecanicos.nome']}}</td>
                 <td>{{os.problema}}</th>
-                <td>{{os.diagnostico}}</td>
                 <td>{{os.status_os}}</td>
                 <td>{{os.criado_em}}</td>
                 <td>
                     <div class="d-flex">
                         <a href="{{url_for('ordens.ItensOs', id_os = os.id, cliente = os.nome)}}" class="adicionar"><i class="fa fa-plus-square"></i></a>
+                        <a href="{{url_for('ordens.InfoOs', id_os = os.id, cliente = os.nome, mecanico = os['mecanicos.nome'])}}" class="info_os"><i class="fa fa-info-circle"></i></a>
                         <a href="#" class="editar"><i class="fa fa-edit"></i></a>
                         <a href="#" class="excluir"><i class="fa fa-trash"></i></a>
                     </div>
