--- a/routes/ordens_de_servico/os_templates/info_os.html
+++ b/routes/ordens_de_servico/os_templates/info_os.html
@@ -59,6 +59,9 @@
             <div class="col-2">
                 <h3>R$ {{item.valor}},00</h3>
             </div>
+            <div class="col-1">
+                <a href="#" class="excluir"><i class="fa fa-trash"></i></a>
+            </div>
             {% endfor %}
         </div>
         <div class="row mt-2">
@@ -68,8 +71,18 @@
             <div class="col-2">
                 <h2>Total:</h2>
             </div>
-             <div class="col-2">
-                <h3>R$ 5000,00</h3>
+            <div class="col-2">
+                <h3>R$ {{soma}},00</h3>
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="d-flex justify-content-center gap-2 mt-4">
+                <div>
+                    <a href="{{url_for('ordens.OrdensServico')}}" class="btn btn-primary">Voltar</a>
+                </div>
+                <div>
+                    <button type="submit" class="btn btn-success">Pagar Os</button>
+                </div>
             </div>
         </div>
     </div>
