--- a/routes/ordens_de_servico/os_templates/info_os.html
+++ b/routes/ordens_de_servico/os_templates/info_os.html
@@ -60,7 +60,7 @@
                 <h3>R$ {{item.valor}},00</h3>
             </div>
             <div class="col-1">
-                <a href="#" class="excluir"><i class="fa fa-trash"></i></a>
+                <a href="{{url_for('ordens.DeletarItemOs', id = item.id)}}" class="excluir"><i class="fa fa-trash"></i></a>
             </div>
             {% endfor %}
         </div>
